Refactor. Extraction and rearranging of constants.