@@ -1,19 +1,16 @@
 package com.twu.biblioteca;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class BibliotecaApp {
 
-    private final String WELCOME_MESSAGE = "Welcome to Biblioteca. Your one-stop-shop for great book titles in Bangalore!";
     private Library library;
-
 
     public BibliotecaApp() {
         Book book1 = new Book("Pragmatic Programmer", "Andy Hunt", 1998);
         Book book2 = new Book("Extreme Programming", "Kent Beck", 1998);
         Book book3 = new Book("Agile", "Andy", 1998);
-        List<Book> books = Arrays.asList(book1, book2, book3);
+        List<Book> books = List.of(book1, book2, book3);
         library = new Library(books);
     }
 
@@ -32,6 +29,7 @@ public class BibliotecaApp {
     }
 
     public void displayWelcomeMessage() {
+        String WELCOME_MESSAGE = "Welcome to Biblioteca. Your one-stop-shop for great book titles in Bangalore!";
         System.out.println(WELCOME_MESSAGE);
     }
 }
